--- a/index.html
+++ b/index.html
@@ -11,27 +11,8 @@
   <link rel ="stylesheet" type="text/css" href="css/style.css"> 
   
 </head>
-<body onload="loading()">
+<body >
 
-<div id="loader-bg">
-      <div class="loader">
-            <span class="circle"></span>
-            <span class="circle"></span>
-            <span class="circle"></span>
-            <span class="circle"></span>
-            <span class="circle"></span>
-            <span class="circle"></span>
-            <span class="circle"></span>
-            <span class="circle"></span>
-            <span class="circle"></span>
-            <span class="circle"></span>
-            <span class="circle"></span>
-            <span class="circle"></span>
-            <span class="circle"></span>
-            <span class="circle"></span>
-            <span class="circle"></span>
-        </div>
-   </div>
 <!----------------------------------header container ------------------------------------------------->
 
 <div class="svg-container" id="svg-container"> 
@@ -47,7 +28,7 @@
   </svg>
 </div>
 
-
+<!--navbar --------------------------------------------------------------------------------------->
 
 <nav class="navbar navbar-expand-md navbar-dark sticky-top">
   <a class="navbar-brand" href="#">ANY LOGO</a>
@@ -80,18 +61,7 @@
     <div class="col-md-6 ">
       <h1>Amal AKLI</h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, veritatis nulla? Ad id, doloremque at ipsa iusto optio</p>
-     <!--
-     <div class="mt-5 pt-4">
-       <a id="button-header" href="#"> 
-         <span></span>
-         <span></span>
-         <span></span>
-         <span></span>
-         Download CV 
-       </a>
-      </div>
-      --> 
-      <div class="row mt-5 ml-1 pt-2">
+      <div class="row mt-5 ml-1 pt-2 col-btn-head">
         <button class="btnHead" >
           Download CV 
         </button>
@@ -108,7 +78,7 @@
 </header>
 
 
-
+<!--section about ---------------------------------------------------------------------------------->
 <section class="cotainer mb-5"  id="about">
 
     <div class="row about" >
@@ -192,17 +162,17 @@
 </section>
 <div class="project-header"></div>
 <section class="container-fluid  p-2 projects ">
-  <div class="row justify-content-center mt-4"><h1 class="Title ">PROJECTS</h1></div>
+  <div class="row justify-content-center m-4 "><h1 class="Title ">PROJECTS</h1></div>
   <div class=" m-5 bloc pt-3">
   <div class="row p-5" >
     <div class="col-lg-4 col-md-8 col-sm-12 d-flex justify-content-center pic pr-4 pl-4">
       <img src="pictures/smartphone-mockup-apps_23-2148080566.jpg">
        
     </div>
-    <div class="col-lg-8 col-md-12 pl-3">
+    <div class="col-lg-8 col-md-12 pl-4 mt-2">
       <h3>Project Title</h3>
       <h4 class="mb-3 mt-2">Sous Titre </h4>
-      <p class="p-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, ipsum laborum in impedit dolore officia numquam, sapiente ipsam voluptatum corrupti et accusantium molestiae tempora quo repudiandae aliquam at illum voluptates.</p>
+      <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, ipsum laborum in impedit dolore officia numquam, sapiente ipsam voluptatum corrupti et accusantium molestiae tempora quo repudiandae aliquam at illum voluptates.</p>
       <div class="mt-2 link"><a href ="https://bennettfeely.com/clippy/" > <i class=" fas fa-link "></i> View Porject</a></div>
  
     </div>
@@ -211,10 +181,10 @@
     <div class="col-lg-4 col-md-8 col-sm-12 d-flex justify-content-center pic  pr-4 pl-4">
       <img src="pictures/08264e89764417.5dffc2e6ea64d-1000x750.jpg">
     </div>
-    <div class="col-lg-8 col-md-12 pl-3">
+    <div class="col-lg-8 col-md-12 pl-4 mt-2">
       <h3>Project Title</h3>
       <h4 class="mb-4">date : 20 jan 2020 </h4>
-      <p class="p-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, ipsum laborum in impedit dolore officia numquam, sapiente ipsam voluptatum corrupti et accusantium molestiae tempora quo repudiandae aliquam at illum voluptates.</p>
+      <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, ipsum laborum in impedit dolore officia numquam, sapiente ipsam voluptatum corrupti et accusantium molestiae tempora quo repudiandae aliquam at illum voluptates.</p>
       <div class="mt-2 link" ><a href ="https://bennettfeely.com/clippy/" >  <i class=" fas fa-link "></i> View Porject</a></div>
     </div>
   </div>
@@ -222,10 +192,10 @@
     <div class="col-lg-4 col-md-8 col-sm-12 d-flex justify-content-center pic  pr-4 pl-4">
         <img src="pictures/All-Free-Mockups-Mockup-World.jpg">
     </div>
-    <div class="col-lg-8 col-md-12  pl-3">
+    <div class="col-lg-8 col-md-12  pl-4 mt-2">
       <h3>Project Title</h3>
       <h4 class="mb-4">date : 20 jan 2020 </h4>
-      <p class="p-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, ipsum laborum in impedit dolore officia numquam, sapiente ipsam voluptatum corrupti et accusantium molestiae tempora quo repudiandae aliquam at illum voluptates.</p>
+      <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, ipsum laborum in impedit dolore officia numquam, sapiente ipsam voluptatum corrupti et accusantium molestiae tempora quo repudiandae aliquam at illum voluptates.</p>
       <div class="mt-2 link"><a href ="https://bennettfeely.com/clippy/" >  <i class=" fas fa-link "></i> View Porject</a></div>
     </div>
   </div>
@@ -234,7 +204,7 @@
 
 
 
-<section class="container-fluid skkils ">
+<section class="container-fluid skkils p-5 ">
   <h1 class="Title text-center" >SKILLS</h1>
   <p class="text-center " style="font-size: 17px ;">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, nulla. Quas repudiandae ?</p>
