--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <title>PORTFOLIO</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/all.css">
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="stylesheet" type="text/css" href="css/normalize.css" />
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <link rel="stylesheet" href="css/aos.css" />
   <link rel ="stylesheet" type="text/css" href="css/style.css"> 
   
 </head>
@@ -62,7 +62,7 @@
   <div class="row">
     <div class="col-md-6 ">
       <h1>Amal AKLI</h1>
-      <p>Hello there , I'm Amal computer science student , i'm also <br>, <span class="animate"></span></p>
+      <p>Hello there , I'm Amal computer science student , i'm also <br> <span class="animate"></span></p>
       <div class="row mt-5 ml-1 pt-2 col-btn-head">
         <button class="btnHead" >
           Download CV 
@@ -518,8 +518,6 @@
     </a>
   
 </div>
-
-
 </footer>
 
 
@@ -529,13 +527,13 @@
 
 </body>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 <script src="js/TweenMax.min.js"></script>
-<script src="https://kit.fontawesome.com/a076d05399.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
-<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script src="js/a076d05399.js"></script>
+<script src="js/typed.js@2.0.11"></script>
+<script src="js/aos.js"></script>
 <script src="js/js.js" ></script>
 <script>
   AOS.init({
